[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>", "Rust Embedded Community Developers"]
categories = ["embedded", "no-std"]
description = "A basic SD/MMC driver for Embedded Rust."
edition = "2021"
keywords = ["sdcard", "mmc", "embedded", "fat32"]
license = "MIT OR Apache-2.0"
name = "embedded-sdmmc"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/embedded-sdmmc-rs"
version = "0.7.0"

[dependencies]
byteorder = {version = "1", default-features = false}
defmt = {version = "0.3", optional = true}
embedded-hal = { version = "1.0"}
embedded-hal-async = { version = "1.0", default-features = false }
heapless = "^0.8"
log = {version = "0.4", default-features = false, optional = true}

[dev-dependencies]
chrono = "0.4"
env_logger = "0.10.0"
flate2 = "1.0"
hex-literal = "0.4.1"
sha2 = "0.10"
embedded-hal-bus = {version = "0.1.0", features = ["async"]}
tokio-test = "*"
tokio = {version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
async-std = "1.12.0"

[features]
default = ["log"]
defmt-log = ["dep:defmt"]
log = ["dep:log"]
